<resources>
    <string name="app_name">getFitApp</string>
    <string name="bentoverrow">
        Preparation/

        Bend knees slightly and bend over bar
        with back straight. Grasp bar with wide overhand grip.

        Execution

        Pull bar to upper waist. Return until arms are extended and
        shoulders are stretched downward. Repeat.

        Comments

        Torso may be kept horizontal for strict execution.
        Knees are bent in effort to keep low back straight
        If low back becomes rounded due to tight hamstrings, either try bending knees more
        or dont position torso as low. Either fix may compromise involvement of Latissimus
        Dorsi since it forces more shoulder transverse extension and less shoulder extension range
        of motion. If low back is rounded due to poor form, deadlift weight to standing position and
        lower torso into horizontal position with knees bent and back straight. A shoulder width or
        underhand grip can increase lat involvement by emphasizing shoulder extension over transverse
        extension. A wide overhand grip involves overall back musculature while slightly emphasizing
        Rear Delt, Infraspinatus and Teres Minor involvement. Also known as Pendlay Row.
    </string>
    <string name="back_text">Back</string>
    <string name="chest_Text">Chest</string>
    <string name="core_text">Core</string>
    <string name="upLegs_Text">Upper Legs</string>
    <string name="totBod_Text">Total Body</string>
    <string name="back_descript">Back Workouts</string>
    <string name="chest_descript">Chest Workouts</string>
    <string name="core_descript">Core Workouts</string>
    <string name="upLeg_descript">Upper Leg Workouts</string>
    <string name="totBod_descript">Total Body Workouts</string>
</resources>